# shl2026

./: .dvcignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  DATA_LICENSE.md  IDEAS.md  LICENSE  METHODS.md  README.md  REPRODUCIBILITY.md  SETUP.md  STUDENTS.md  codemeta.json  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: ci.yml
conf/: config.yaml
conf/data/: test.yaml  train_all_locations.yaml  validation.yaml
conf/eval/: default.yaml
conf/foundation/: placeholder.yaml
conf/head/: linear.yaml  mlp.yaml
conf/train/: default.yaml
containers/: Dockerfile  apptainer.def
docs/: CLUSTER.md
docs/plans/: 2026-05-25-infrastructure-design.md
notebooks/: template_experiment.ipynb
paper/: .gitignore  README.md  refs.bib
scripts/: build_container.sh  mlflow_server.sh  student_job.sbatch  submit.sh  verify_data.py
src/shl2026/: __init__.py  __main__.py
src/shl2026/data/: __init__.py  embeddings.py  synthetic.py
src/shl2026/eval/: __init__.py  leaderboard.py  metrics.py
src/shl2026/features/: __init__.py
src/shl2026/foundation/: __init__.py
src/shl2026/heads/: __init__.py  zoo.py
src/shl2026/submission/: __init__.py  validate.py  write.py
src/shl2026/tracking/: __init__.py  autolog.py  run_context.py  snapshot.py
tests/: conftest.py  test_inner_loop.py  test_smoke.py  test_snapshot.py  test_submission_validate.py  test_verify_data.py
