[project]
name = "shl2026"
version = "0.0.0"
description = "AGH submission pipeline for the Sussex-Huawei Locomotion Challenge 2026."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [
  { name = "Mateusz Daniol", email = "mateuszdaniol@gmail.com" },
]
keywords = [
  "human-activity-recognition",
  "transportation-mode",
  "foundation-models",
  "SHL",
  "wearables",
  "FAIR",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "scikit-learn>=1.4",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "mlflow>=2.12",
  "dvc>=3.50",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.optional-dependencies]
torch = [
  "torch>=2.3",
  "transformers>=4.41",
  "accelerate>=0.30",
  "safetensors>=0.4",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "nbstripout>=0.7",
]

[project.scripts]
shl2026 = "shl2026.__main__:app"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shl2026"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",     # pycodestyle / pyflakes
  "I",               # isort
  "B",               # bugbear
  "UP",              # pyupgrade
  "SIM",             # simplify
  "RUF",             # ruff-specific
]
ignore = ["E501"]    # line length handled by formatter

[tool.ruff.lint.flake8-bugbear]
# Typer requires Option/Argument calls in parameter defaults.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
files = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
  "slow: marks slow tests (deselect with -m 'not slow')",
  "gpu: requires a GPU (skipped in CPU CI)",
]
